--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get_storage: ^2.1.1
   flutter_svg: ^2.1.0
   google_fonts: ^6.2.1
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
