--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^2.1.0
   google_fonts: ^6.2.1
   loading_animation_widget: ^1.3.0
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
