--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+android/app/.cxx/Debug/1s6h4sx4/arm64-v8a/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/arm64-v8a/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/x86/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/x86_64/configure_fingerprint.bin
