--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   intl_phone_field: ^3.2.0
   pinput: ^5.0.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
