--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,19 +16,20 @@ dependencies:
   flutter_screenutil: ^5.9.3 
   intl: any
   cupertino_icons: ^1.0.8
-  get_storage: ^2.1.1
-  flutter_svg: ^2.1.0
-  google_fonts: ^6.2.1
-  loading_animation_widget: ^1.3.0
-  intl_phone_field: ^3.2.0
-  pinput: ^5.0.1
-  carousel_slider: ^5.0.0
+  get_storage: 2.1.1
+  flutter_svg: 2.1.0
+  google_fonts: 6.2.1
+  loading_animation_widget: 1.3.0
+  intl_phone_field: 3.2.0
+  pinput: 5.0.1
+  carousel_slider: 5.0.0
+  dots_indicator: 4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: 5.0.0
 
 flutter:
   uses-material-design: true
