--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ android/app/.cxx/Debug/1s6h4sx4/arm64-v8a/configure_fingerprint.bin
 android/app/.cxx/Debug/1s6h4sx4/arm64-v8a/configure_fingerprint.bin
 android/app/.cxx/Debug/1s6h4sx4/x86/configure_fingerprint.bin
 android/app/.cxx/Debug/1s6h4sx4/x86_64/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/arm64-v8a/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/armeabi-v7a/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/x86/configure_fingerprint.bin
+android/app/.cxx/Debug/1s6h4sx4/x86_64/configure_fingerprint.bin
