--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   pinput: 5.0.1
   carousel_slider: 5.0.0
   dots_indicator: 4.0.1
+  flutter_rating: ^2.0.2
 
 dev_dependencies:
   flutter_test:
