--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   carousel_slider: 5.0.0
   dots_indicator: 4.0.1
   flutter_rating: ^2.0.2
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
