--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ android/app/.cxx/Debug/1s6h4sx4/arm64-v8a/configure_fingerprint.bin
 android/app/.cxx/Debug/1s6h4sx4/armeabi-v7a/configure_fingerprint.bin
 android/app/.cxx/Debug/1s6h4sx4/x86/configure_fingerprint.bin
 android/app/.cxx/Debug/1s6h4sx4/x86_64/configure_fingerprint.bin
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugins.cmake
+macos/Flutter/GeneratedPluginRegistrant.swift
+windows/flutter/generated_plugin_registrant.cc
+pubspec.lock
