--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dots_indicator: 4.0.1
   flutter_rating: ^2.0.2
   flutter_typeahead: ^5.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
